// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should render ProgressBar with default props 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx XURfx"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="progress-1"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Label
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-1"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO lplggX"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render ProgressBar without label and percentage 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-7"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO jwkiuE"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-9"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO lplggX"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast information intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-17"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 cgqMEQ kYqHzO iMjTZp"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast negative intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-13"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 dkjEtv kYqHzO eIBSOi"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast neutral intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-19"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 jjdQUy kYqHzO gVVoMr"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast notice intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-15"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 cQZTS kYqHzO jzABcb"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render high contrast positive intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO cZJNWw"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-11"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx kClchI"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 bRAiRW kYqHzO fBwCSf"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render low contrast information intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-16"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 cgqMEQ kYqHzO iMjTZp"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render low contrast negative intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-12"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 dkjEtv kYqHzO eIBSOi"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render low contrast neutral intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-18"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 jjdQUy kYqHzO gVVoMr"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render low contrast notice intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-14"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 cQZTS kYqHzO jzABcb"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render low contrast positive intent ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      >
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-10"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 bRAiRW kYqHzO fBwCSf"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render medium size ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx XURfx"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="progress-6"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Label
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-6"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx gCfhPD"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO lplggX"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render meter variant of ProgressBar  1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        aria-valuetext="70"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="meter-8"
        role="meter"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO fuapri"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render small size ProgressBar 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx XURfx"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="progress-5"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Label
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-5"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO lplggX"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should update the progress value appropriately 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Update Progress
      </div>
    </div>
  </button>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx XURfx"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="progress-3"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Label
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            0%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-3"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO jwDWIt"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should update the progress value appropriately 2`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Update Progress
      </div>
    </div>
  </button>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="progress-bar"
  >
    <div
      class="BaseBox-bmPWx hnXODi"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx XURfx"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="progress-3"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Label
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
        <div
          class="BaseBox-bmPWx bqWBik"
          data-blade-component="base-box"
        >
          <p
            class="StyledBaseText-dVBfTO deSIOg"
            data-blade-component="text"
          >
            60%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="60"
        aria-valuetext="60%"
        class="BaseBox-bmPWx"
        data-blade-component="base-box"
        id="progress-3"
        role="progressbar"
      >
        <div
          class="BaseBox-bmPWx lbzRdB"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminateFilledContainer-sc-15oi5xk-4 fNXoki kYqHzO eXZutX"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx ProgressBarFilledweb__BoxWithProgressFillTransition-sc-15oi5xk-3 ProgressBarFilledweb__DeterminatePulseAnimation-sc-15oi5xk-5  bHgVSx jPQGWt"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
